rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__advanced_filters__having_with_joined_dim.snap
---
source: cubesqlplanner/src/tests/integration/advanced_filters.rs
expression: result
---
customers__city
---------------
New York
