rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__advanced_filters__having_without_measure.snap
---
source: cubesqlplanner/src/tests/integration/advanced_filters.rs
expression: result
---
orders__status
--------------
completed     
pending
